--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 [Dd]ebug/
 [Rr]elease/
 x64/
-build/
 [Bb]in/
 [Oo]bj/
 
@@ -152,3 +151,8 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+
+/Build/*.html
+
+/Build/*.xml
+/Build/_BuildReport_Files
